# autonnorm-python-utilities

./: .gitignore  .pylintrc  README.md  setup.py
AutoNormGeneral/: pyproject.toml  setup.py
autonorm/: README.md  pyproject.toml  setup.py
autonorm/autonorm/: __init__.py  demographics.py  enums.py
bhc_aws/: setup.py
bhc_aws/bhc_aws/: __init__.py  lambda_invocation.py  lambda_request_context.py  proxy_response.py  secrets_controller.py
bhc_modules/bhc_modules/: autonorm.py
bhc_psyncs/: __init_.py  setup.py
bhc_psyncs/bhc_psyncs/: __init__.py  controller.py  demographics.py  enums.py  normalized_scores.py  psyncs_norm_response.py  psyncs_response.py  psyncs_response_norm.py  score.py
bhc_redcap/: setup.py
bhc_redcap/bhc_redcap/: __init__.py  controller.py  data_entry_trigger.py  project.py  record.py
bhc_secrets/: requirements.txt  setup.py
bhc_secrets/bhc_secrets/: __init__.py  aws_secrets_controller.py  bhc_secrets.py
bhc_utilities/: setup.py
tests/bhc_psyncs/: test_psyncs_controller.py
tests/bhc_redcap/: test_redcap_controller.py
