[build-system]
requires = [
    "setuptools>=61.0",
    ]
build-backend = "setuptools.build_meta"

[project]
name = "autonorm"
version = "0.0.1"
description = "Package with Generic objects for accessing and storing data within the autonorm system"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/EmoryBHC/autonnorm-python-utilities"
"Bug Tracker" = "https://github.com/EmoryBHC/autonnorm-python-utilities/issues"


